# mle-training

./: Assignment 3.1.ipynb  Dockerfile  README.md  nonstandardcode.py  setup.cfg  setup.py
.ipynb_checkpoints/: mlfow_housing-checkpoint.ipynb
artifacts/models/: forest_model.pkl
deploy/conda/: linux_cpu_py39.yml
docs/source/: conf.py
mlruns/2/202a6dbf8f714a7ea87c6a1f1e3dc47b/artifacts/model/: MLmodel
mlruns/2/5b5f193829914edb898b0514691309d5/artifacts/model/: MLmodel  conda.yaml
mlruns/2/bb90bc678a324c708980f954f403304f/artifacts/model/: MLmodel  model.pkl
src/housing/: ingest_data.py  score.py  train.py
src/mle_DEVANAND.C_housing.egg-info/: PKG-INFO  SOURCES.txt
