[metadata]
name = mle-DEVANAND.C-housing
version = v0.3
author = DEVANAND K P
author_email = devanand.prakasa@tigeranalytics.com
description = A installable housing-package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DevanandKP/mle-training
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
[flake8]
ignore = ["E501"]